[package]
name = "ble-re-stuff-idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
btleplug = { version =  "0.10.1", features = ["serde"] }
tracing-subscriber = "0.3.16"
tracing = "0.1.37"
futures = "0.3.25"
tokio-stream = { version = "0.1.11", features = ["sync"] }
enigo = "0.0.14"
colored = "2.0.0"